Updating News items across site.

--- a/assets/scss/elements/_banner.scss
+++ b/assets/scss/elements/_banner.scss
@@ -404,6 +404,7 @@
     .cornered-container {
       margin-bottom: 2.25rem;
       .cornered-box {
+        width: 90%;
         padding: 1.5rem;
         text-align: justify;
         font-size: 15px;
@@ -487,7 +488,7 @@
       hsla(0, 0%, 0%, 0.987) 91.9%,
       hsl(0, 0%, 0%) 100%
     );
-    opacity: 0.4;
+    opacity: 0.55;
     z-index: 1;
   }
   .banner-four-wrapper {
