--- a/assets/scss/elements/_calendar.scss
+++ b/assets/scss/elements/_calendar.scss
@@ -403,7 +403,7 @@ $outline-color: #e6e6e6;
     font-family: "IKOB";
     font-size: 45px;
     color: var(--color-primary);
-    margin-bottom: 0;
+    margin-bottom: 1rem;
   }
 
   #events-list {
