--- a/assets/scss/default/_custom.scss
+++ b/assets/scss/default/_custom.scss
@@ -301,6 +301,8 @@ section.homepage-notices {
         display: flex;
         flex-direction: column;
         transition: all 0.15s ease;
+        box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
+          rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
         a {
           text-decoration: none;
           display: flex;
@@ -354,7 +356,7 @@ section.homepage-notices {
                 display: flex;
                 flex-direction: row;
                 color: #262626;
-                margin-bottom: 1rem;
+                margin-bottom: 0.5rem;
                 div {
                   width: fit-content;
                 }
@@ -366,6 +368,9 @@ section.homepage-notices {
                   border-bottom: 1.5px dotted rgb(0 0 0 / 7%);
                   margin-left: 10px;
                   margin-right: 10px;
+                }
+                &.donation-row {
+                  font-weight: 600;
                 }
               }
               .specials {
@@ -379,6 +384,29 @@ section.homepage-notices {
                   }
                   &:last-of-type {
                     margin-bottom: 3rem;
+                  }
+                }
+                .special-wrapper {
+                  padding: 2rem;
+                  border: 1.5px solid rgb(240, 240, 240);
+                  .row {
+                    [class*="col"] {
+                      h4 {
+                        font-family: "Oswald";
+                        text-transform: uppercase;
+                        color: black;
+                        font-weight: 550;
+                      }
+                      .callaway-logo-wrapper {
+                        img {
+                          width: 30px;
+                          height: auto;
+                        }
+                      }
+                      .callaway-opus {
+                        width: 100px;
+                      }
+                    }
                   }
                 }
               }
@@ -418,12 +446,9 @@ section.homepage-notices {
           }
         }
         &:hover {
-          box-shadow: rgba(118, 118, 118, 0.04) 0px 0px 0px 1px,
-            rgba(69, 69, 69, 0.04) 0px 1px 1px -0.5px,
-            rgba(64, 64, 64, 0.04) 0px 3px 3px -1.5px,
-            rgba(63, 63, 63, 0.04) 0px 6px 6px -3px,
-            rgba(117, 117, 117, 0.04) 0px 12px 12px -6px,
-            rgba(124, 124, 124, 0.04) 0px 24px 24px -12px;
+          transform: translateY(-1px);
+          box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
+            rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
         }
       }
     }
@@ -544,7 +569,7 @@ section.homepage-notices {
   // corners ruleset
   --b: 1px; /* thickness of the border */
   --c: rgb(255, 255, 255); /* color of the border */
-  --w: 20px; /* length of the lines in the corner */
+  --w: 14px; /* length of the lines in the corner */
   border: var(--b) solid #0000; /* space for the border */
   --_g: #0000 90deg, var(--c) 0;
   --_p: var(--w) var(--w) border-box no-repeat;
@@ -1960,9 +1985,14 @@ section.pro-shop-body {
   }
 }
 .schedule-note {
-  font-size: 18px;
-  color: grey;
-  max-width: 600px;
+  font-family: "Sono";
+  font-weight: 450;
+  font-size: 14px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  color: #979797;
+  max-width: 508px;
+  line-height: 153%;
   margin: 0 auto;
 }
 
@@ -2053,9 +2083,16 @@ section.pro-shop-body {
         .pga-member-logo {
           width: 80px;
           height: auto;
+          filter: drop-shadow(0 1px 1px rgba(0, 0, 0, 0.005))
+            drop-shadow(0 2px 2px rgba(0, 0, 0, 0.01))
+            drop-shadow(0 4px 4px rgba(0, 0, 0, 0.02))
+            drop-shadow(0 8px 8px rgba(0, 0, 0, 0.03))
+            drop-shadow(0 16px 16px rgba(0, 0, 0, 0.04))
+            drop-shadow(0 32px 32px rgba(0, 0, 0, 0.05));
         }
         h3 {
           padding-top: 2rem;
+          margin-bottom: 0.75rem;
           font-size: 37px;
         }
         .shop-note {
@@ -2063,6 +2100,7 @@ section.pro-shop-body {
           margin-bottom: 10px;
           font-size: 27px;
           line-height: 140%;
+          color: #484848;
         }
         ul {
           list-style-type: none;
@@ -2828,7 +2866,7 @@ footer {
         }
       }
       &.why-choose-us-working-process {
-        padding-top: 6rem;
+        padding-bottom: 3rem;
         [class*="shape"] {
           display: none;
         }
@@ -2844,6 +2882,9 @@ footer {
                 font-size: 37px;
                 line-height: 110%;
                 margin-bottom: 15px;
+              }
+              p {
+                font-size: 15px;
               }
             }
           }
@@ -2881,10 +2922,13 @@ footer {
       .the-table-itself {
         overflow: hidden;
         .hours-table-brow {
-          background-size: 49%;
+          background-size: 59%;
+          background-position: 130% 75%;
           .table-title-wrapper {
             flex-direction: column;
-            padding: 2rem;
+            padding: 1rem;
+            padding-bottom: 1.25rem;
+            padding-top: 1.5rem;
             .icon-box {
               margin-bottom: 1rem;
             }
@@ -2896,6 +2940,9 @@ footer {
         }
         .some-tables {
           padding-right: 4rem;
+          padding-left: 3.35rem;
+          padding-top: 1.25rem;
+          padding-bottom: 2rem;
           ol {
             margin-inline-start: 10px;
           }
@@ -3030,7 +3077,8 @@ footer {
   }
   section.sponsors-section .container .row .title-center-2 .title {
     font-size: 37px;
-    margin-bottom: 15px;
+    margin-bottom: 3rem;
+    line-height: 110%;
   }
   section.sponsors-section
     .container
@@ -3086,7 +3134,7 @@ footer {
   }
   section.pro-shop-body {
     & > .container {
-      padding-top: 4rem;
+      padding-top: 1rem;
       .row {
         &.lined-row {
           border-top: none;
@@ -3135,12 +3183,24 @@ footer {
         columns: unset;
         padding-bottom: 2rem;
         p {
-          font-size: 16px;
+          font-size: 15px;
+        }
+      }
+      .hr-group {
+        &:after {
+          width: 38px;
         }
       }
       .container-consulting {
-        h2 {
-          @include mobile-h3;
+        .row {
+          .title-center-style-two {
+            h2 {
+              @include mobile-h3;
+            }
+            .schedule-note {
+              font-size: 12px;
+            }
+          }
         }
         .consulting-step {
           margin-top: 0;
@@ -3148,6 +3208,12 @@ footer {
             padding-left: 1rem;
             .timeline-dot {
               left: 0.47%;
+            }
+            .right-area {
+              p {
+                font-size: 15px;
+                line-height: 145%;
+              }
             }
           }
         }
@@ -3229,9 +3295,11 @@ footer {
             border: none;
             h3 {
               @include mobile-h3;
+              margin-bottom: 1.25rem;
             }
             .shop-note {
               line-height: 110%;
+              font-size: 20px;
             }
           }
         }
@@ -3240,13 +3308,19 @@ footer {
   }
   section {
     &.contact-page-body {
+      padding-bottom: 10rem;
       .container {
         .rts-location-contact-area {
           padding-top: 2rem;
           .container {
             .row {
               [class*="col"] {
-                margin-top: 7rem;
+                margin-top: 4rem;
+                .single-location-area-contact {
+                  & > span {
+                    font-size: 15px;
+                  }
+                }
               }
             }
           }
@@ -3257,12 +3331,23 @@ footer {
           .row {
             [class*="col"] {
               .directions-addendum {
-                padding: 4rem 2.5rem 4rem 2.5rem;
+                padding: 3rem 2.5rem 4rem 2.5rem;
                 p {
                   line-height: 149%;
                   font-size: 15px;
                 }
               }
+            }
+          }
+        }
+      }
+      .contact-area-form-wrapper {
+        padding-top: 10rem;
+        .container-contact {
+          .row {
+            .title {
+              font-size: 37px;
+              margin-bottom: 0;
             }
           }
         }
@@ -3396,13 +3481,20 @@ footer {
         tbody {
           tr {
             th {
+              padding-left: 18px;
+              padding-top: 18px;
+              padding-bottom: 18px;
               .th-wrap {
-                line-height: 125%;
+                line-height: 115%;
               }
               .note {
                 font-size: 12px;
-                padding-top: 3px;
+                padding-top: 2px;
               }
+            }
+            td {
+              padding-top: 18px;
+              padding-bottom: 18px;
             }
           }
         }
@@ -3415,6 +3507,11 @@ footer {
           }
         }
       }
+    }
+  }
+  section {
+    &.sponsors-section {
+      padding-top: 10rem;
     }
   }
 }
@@ -3552,50 +3649,62 @@ footer {
       padding-bottom: 7rem;
       .container {
         .title {
-          margin-bottom: 3rem;
+          margin-bottom: 4rem;
           font-size: 37px;
           // text-align: left;
         }
         .row {
-          [class*='col'] {
-.single-blog-area-start {
-            margin-bottom: 0rem;
-            a {
-              .image-area {
-                height: 207px;
-              }
-              .inner-content-area {
-                padding: 3rem 2rem 2rem 2rem;
-                .top-area {
-                  & > *:not(h3, h6),
-                  p {
-                    font-size: 15px;
-                  }
-                  .title {
-                    font-size: 25px;
-                    margin-bottom: 1rem;
-                  }
-                  h6 {
-                    font-size: 21px;
-                    margin-bottom: 3px;
-                  }
-                  hr {
-                    margin-bottom: 14px;
-                  }
+          [class*="col"] {
+            .single-blog-area-start {
+              margin-bottom: 0rem;
+              a {
+                .image-area {
+                  height: 207px;
                 }
-                .link-bar {
-                  margin-top: 1rem;
-                  font-size: 18px;
+                .inner-content-area {
+                  padding: 3rem 2rem 2rem 2rem;
+                  .top-area {
+                    & > *:not(h3, h6),
+                    p {
+                      font-size: 15px;
+                    }
+                    .title {
+                      font-size: 25px;
+                      margin-bottom: 1rem;
+                    }
+                    h6 {
+                      font-size: 20px;
+                      margin-bottom: 3px;
+                      line-height: 111%;
+                    }
+                    hr {
+                      margin-bottom: 14px;
+                    }
+                  }
+                  .link-bar {
+                    margin-top: 1rem;
+                    font-size: 18px;
+                  }
                 }
               }
             }
           }
-          }
-          
         }
       }
       &.pro-shop-notices {
         padding-top: 7rem;
+      }
+    }
+  }
+  section {
+    &.pro-shop-body {
+      .note-box {
+        .img-box {
+          height: 142px;
+          img {
+            width: 72%;
+          }
+        }
       }
     }
   }
@@ -3604,7 +3713,7 @@ footer {
       .rts-footer-area {
         .container {
           & > .row {
-            padding-bottom: 4rem;
+            padding-bottom: 3rem;
             .logo-column {
               .logo-brick {
                 padding-bottom: 2.5rem;
@@ -3664,9 +3773,20 @@ footer {
       }
     }
     .rts-copyright-area-one {
-      .new-row {
-        p {
-          font-size: 15px;
+      .row {
+        [class*="col"] {
+          .copyright-wrapper {
+            .new-row {
+              p {
+                a {
+                  font-size: 15px;
+                }
+              }
+            }
+            .teequest-link {
+              font-size: 15px;
+            }
+          }
         }
       }
     }
