Updated calendar builder to adjust for fullCalendar.js end date weirdness. Updated footer address link.

--- a/assets/scss/elements/_footer.scss
+++ b/assets/scss/elements/_footer.scss
@@ -133,6 +133,7 @@
         width: 20px;
         opacity: 0.65;
       }
+      cursor: pointer;
       transition: all 0.25s ease;
       &:hover {
         color: rgba(255, 255, 255, 0.65);
